--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,11 @@ numpy==1.12.0
 scikit-learn==0.19.0
 sklearn==0.0
 graphviz==0.8
+tensorflow==0.12.1
+pandas==0.20.3
+seaborn==0.8.1
+matplotlib==2.0.0
+ast==0.0.2
+keras==2.0.8
+protobuf==3.4.0
+tf-nightly==1.4.0.dev20170922
